# juice-bge-reranker-coreml

./: .gitignore  MODEL_CARD.md  README.md  bench.py  convert.py  pixi.toml  publish.py  pyproject.toml  verify_ane.py
.eval_results/: scidocs-reranking.yaml
eval/: quality_regression.py
examples/: README.md  predict.py
examples/swift/: Package.resolved  Package.swift
examples/swift/Sources/Predict/: main.swift
src/: ane_xlm_roberta.py  provenance.py  weight_transfer.py
tests/: test_numerical_equivalence.py
