[project]
name = "juice-bge-reranker-coreml"
version = "0.1.0"
description = "Maintainer tool: convert BAAI/bge-reranker-base to an ANE-resident Core ML .mlpackage and publish to Hugging Face Hub."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Tripp Cashel", email = "tcashel@gmail.com" }]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "3.13.*"
pip = ">=24"

[tool.pixi.pypi-dependencies]
torch = ">=2.2"
transformers = ">=4.40"
coremltools = ">=8.1"
huggingface-hub = ">=0.24"
sentencepiece = ">=0.2"
numpy = "<2.2"
protobuf = ">=3.20"
pytest = ">=8"
ty = ">=0.0.1a"
ruff = ">=0.6"

[tool.pixi.tasks]
convert = "python convert.py"
verify-ane = "python verify_ane.py"
bench = "python bench.py"
publish = "python publish.py"
test = "pytest tests/ -v"
typecheck = "ty check"
lint = "ruff check ."
fmt = "ruff format ."
fmt-check = "ruff format --check ."

# Opt-in eval feature. Mounted as a separate environment so `pixi install` (the
# default env used by convert/verify/bench/publish) stays lean — the heavy
# `datasets` dep is only fetched when `pixi install -e eval` is run.
[tool.pixi.feature.eval.pypi-dependencies]
datasets = ">=2.20"

[tool.pixi.feature.eval.tasks]
eval = "python eval/quality_regression.py"
eval-full = "python eval/quality_regression.py --tasks all-reranking"

[tool.pixi.environments]
default = { solve-group = "default" }
eval = { features = ["eval"], solve-group = "default" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ty.environment]
python-version = "3.13"
extra-paths = ["."]

[tool.ty.src]
# eval/ is intentionally omitted: it imports `datasets`, which only lives in the
# opt-in eval pixi environment, so type-checking it from the default env would
# spuriously fail. ruff still lints/formats it via [tool.ruff].
include = ["src", "vendor", "tests", "convert.py", "verify_ane.py", "bench.py", "publish.py"]

[tool.ty.rules]
unresolved-import = "error"

[tool.ruff]
line-length = 150
target-version = "py313"
extend-exclude = ["build", ".pixi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
per-file-ignores = { "vendor/**" = ["E", "F", "B", "UP", "SIM"] }
